# bazel-root

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
