load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# run to generate compile_commands.json in the root directory for all subdirectories
refresh_compile_commands(
    name = "refresh_compile_commands",
)

# run `bazel run :requirements.update` to update. The
# command will fail if the corresponding lock-file does not
# already exist. If so, `touch requirements_lock.txt" first.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    # requirements_windows = "requirements_windows.txt",
)
